--- a/packages/flutter_stockfish/android/build.gradle
+++ b/packages/flutter_stockfish/android/build.gradle
@@ -26,8 +26,20 @@ android {
 
     defaultConfig {
         minSdkVersion 16
+
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++17"
+            }
+        }
     }
     lintOptions {
         disable 'InvalidPackage'
+    }
+
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
     }
 }
