--- a/examples/java-objc/pubspec.yaml
+++ b/examples/java-objc/pubspec.yaml
@@ -12,13 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_stockfish:
-    # When depending on this package from a real application you should use:
-    #   flutter_stockfish: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
-    path: ../../packages/flutter_stockfish
+  flutter_stockfish_example_common:
+    path: ../../packages/example_common
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
